--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "docusaurus-plugin-relative-paths": "^1.0.0",
     "graphql": "^16.3.0",
     "i18next": "^21.3.1",
+    "openapi-types": "^10.0.0",
     "typescript": "^4.3.5",
     "yargs": "^17.3.1"
   },
